cluster/base/apps/argocd/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.local`)
      priority: 10
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: argocd-server
          port: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-https
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.local`)
      priority: 10
      services:
        - kind: Service
          name: argocd-server
          port: http
    - kind: Rule
      match: >-
        Host(`argocd.local`) &&
        Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - kind: Service
          name: argocd-server
          port: http
